# nc-watchdog-bot

./: .gitignore  Cargo.toml  LICENSE
src/: api.rs  config.rs  controller.rs  main.rs  report.rs
src/api/: hypertext_element.rs
src/report/: disk_error.rs  disk_info.rs  diskinfo.rs  logfile_error.rs
