[package]
name = "nc-watchdog-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
frankenstein = "0.30.1"
serde = { version = "1.0.195", features = ["derive"] }
sysinfo = "0.30.5"
time = "0.3.31"
timeago = "0.4.2"
